Combined main branch and GUI Still testing how to connect and manage components

--- a/SecureWiki/Avalonia.NETCoreMVVMApp/App.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/App.axaml
@@ -1,9 +1,9 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:Avalonia.NETCoreMVVMApp"
-             x:Class="Avalonia.NETCoreMVVMApp.App">
+             xmlns:secureWiki="clr-namespace:SecureWiki"
+             x:Class="SecureWiki.App">
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <secureWiki:ViewLocator/>
     </Application.DataTemplates>
 
     <Application.Styles>
