--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -1,16 +1,16 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:vm="using:Avalonia.NETCoreMVVMApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModels="clr-namespace:SecureWiki.ViewModels"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        x:Class="Avalonia.NETCoreMVVMApp.Views.MainWindow"
+        x:Class="SecureWiki.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Avalonia.NETCoreMVVMApp"
         Width="300" Height="400" Padding="10">
 
     <Design.DataContext>
-        <vm:MainWindowViewModel/>
+        <viewModels:MainWindowViewModel/>
     </Design.DataContext>
 
     <!--<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
