--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -23,11 +23,11 @@
         -->
         
         <TextBox Name="TextBox1" IsReadOnly="True" >
-            The user may not modify the contents of this TextBox.
+            The user may nosst modify the contents of this TextBox.
         </TextBox>
         
         <Button Name="Button1" Click="Button1_Click">Button1</Button>
-        <Button Name="Button2" Click="Button2_Click">Button2</Button>
+        <Button Name="Button2" Click="Button2_Click">Buttssson2</Button>
         <Button Name="Button3" Click="Button3_Click">Button3</Button>
     </StackPanel>
     
