--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -3,11 +3,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:SecureWiki.ViewModels"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        xmlns:Models="clr-namespace:SecureWiki.Model"
+        mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="400"
         x:Class="SecureWiki.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="Avalonia.NETCoreMVVMApp"
-        Width="300" Height="400" Padding="10">
+        Padding="10"><!--Width="300" Height="400"-->
 
     <Design.DataContext>
         <viewModels:MainWindowViewModel/>
@@ -15,20 +16,54 @@
 
     <!--<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     -->
-    <StackPanel Orientation="Vertical">
-        <!--
-        <TextBlock Name="NameLabel">What is your name?</TextBlock>
-        <TextBox Name="NameTextBox"></TextBox>
-        <TextBlock Name="MessageLabel"></TextBlock>        
-        -->
+    <DockPanel Dock="Top" LastChildFill="True" x:Name="TopLevelDockPanel">
+        <StackPanel Orientation="Vertical" VerticalAlignment="Top" Height="150" Width="300" x:Name="ButtonControlSp">
+            <!--
+            <TextBlock Name="NameLabel">What is your name?</TextBlock>
+            <TextBox Name="NameTextBox"></TextBox>
+            <TextBlock Name="MessageLabel"></TextBlock>        
+            -->
+            
+            <TextBox Name="TextBox1" IsReadOnly="True" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap">
+                The user may not modify the contents of this TextBox.
+            </TextBox>
+            
+            <Button Name="Button1" Click="Button1_Click">Button1</Button>
+            <Button Name="Button2" Click="Button2_Click">Button2</Button>
+            <Button Name="Button3" Click="Button3_Click">Button3</Button>
+                    
+            
+            
+            
+            
+            
+        </StackPanel>
         
-        <TextBox Name="TextBox1" IsReadOnly="True" >
-            The user may nosst modify the contents of this TextBox.
-        </TextBox>
-        
-        <Button Name="Button1" Click="Button1_Click">Button1</Button>
-        <Button Name="Button2" Click="Button2_Click">Buttssson2</Button>
-        <Button Name="Button3" Click="Button3_Click">Button3</Button>
-    </StackPanel>
+        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <StackPanel Orientation="Vertical">
+                <TreeView Items="{Binding rootKeyring}" x:Name="TreeView1">
+                    <TreeView.DataTemplates>
+                        <TreeDataTemplate DataType="Models:RootKeyring" ItemsSource="{Binding combinedList}">
+                            <CheckBox IsChecked="False">
+                                <TextBlock Foreground="Red" Text="{Binding name}"></TextBlock>
+                            </CheckBox>
+                        </TreeDataTemplate>
+                        <TreeDataTemplate DataType="Models:KeyringEntry" ItemsSource="{Binding combinedList}">
+                            <CheckBox IsChecked="False" Checked="CheckBox_CheckedChanged">
+                                <TextBlock Text="{Binding name}"></TextBlock>
+                            </CheckBox>
+                        </TreeDataTemplate>
+                        <DataTemplate DataType="Models:DataFile" >
+                            <CheckBox IsChecked="True" Checked="CheckBox_CheckedChanged" Unchecked="CheckBox_CheckedChanged">
+                                <TextBlock Foreground="Blue" Text="{Binding filename}"></TextBlock>
+                            </CheckBox>
+                        </DataTemplate>
+                    </TreeView.DataTemplates>
+                </TreeView>
+            </StackPanel>
+                
+        </ScrollViewer>
+    </DockPanel>
+    
     
 </Window>
