--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -31,11 +31,24 @@
             <Button Name="Button1" Click="Button1_Click">Button1</Button>
             <Button Name="Button2" Click="Button2_Click">Button2</Button>
             <Button Name="Button3" Click="Button3_Click">Button3</Button>
-                    
             
+            <TextBlock>Enter IP address of MediaWiki server</TextBlock>
+            <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding IP}">
+            </TextBox>
+            <Button Name="ButtonIp" Click="ButtonIP_Click">Change</Button>
+
+            <TextBlock>Login to MediaWiki</TextBlock>
+            <TextBox Name="TextBoxUser" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Username}" Watermark="Username">
+            </TextBox>
+            <TextBox Name="TextBoxPass" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Password}" Watermark="Password">
+            </TextBox>
+            <Button Name="ButtonLogin" Click="ButtonLogin_Click">Login</Button>
             
-            
-            
+            <TextBlock>Share selected keyring</TextBlock>
+            <TextBox Name="TextBoxMail" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding MailRecipient}" Watermark="Recipient email">
+            </TextBox>
+            <Button Name="ButtonMail" Click="ButtonMail">Send</Button>
+
             
         </StackPanel>
         
