--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -6,6 +6,7 @@
         xmlns:Models="clr-namespace:SecureWiki.Model"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="400"
         x:Class="SecureWiki.Views.MainWindow"
+        Opened="MainWindow_Shown"
         Icon="/Assets/avalonia-logo.ico"
         Title="Avalonia.NETCoreMVVMApp"
         Padding="10"><!--Width="300" Height="400"-->
@@ -57,21 +58,26 @@
                 <TreeView Items="{Binding rootKeyring}" Name="TreeView1">
                     <TreeView.DataTemplates>
                         <TreeDataTemplate DataType="Models:RootKeyring" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="False" Name="CheckBox" Checked="CheckBox_CheckedChangedKeyring" Unchecked="CheckBox_CheckedChangedKeyring">
+                            <CheckBox IsChecked="False" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Foreground="Red" Text="{Binding name}"></TextBlock>
                             </CheckBox>
                         </TreeDataTemplate>
                         <TreeDataTemplate DataType="Models:KeyringEntry" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="False" Name="CheckBox" Checked="CheckBox_CheckedChangedKeyring" Unchecked="CheckBox_CheckedChangedKeyring">
+                            <CheckBox IsChecked="False" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Text="{Binding name}"></TextBlock>
                             </CheckBox>
                         </TreeDataTemplate>
                         <DataTemplate DataType="Models:DataFileEntry" >
-                            <CheckBox IsChecked="False" Name="CheckBox" Checked="CheckBox_CheckedChanged">
+                            <CheckBox IsChecked="False" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Foreground="Blue" Text="{Binding filename}"></TextBlock>
                             </CheckBox>
                         </DataTemplate>
                     </TreeView.DataTemplates>
+                    <!--
+                    <Style Selector="TreeViewItem" >
+                        <Setter Property="IsExpanded" Value="True"></Setter>
+                    </Style>
+                    -->
                 </TreeView>
             </StackPanel>
                 
