Added functionality to remove files/folders from keyring when fuse operations is issued.

--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -76,6 +76,10 @@
             </StackPanel>
                 
         </ScrollViewer>
+        <!-- <StackPanel Orientation="Vertical" VerticalAlignment="Top" Height="150" Width="300" x:Name="RevisionControl"> -->
+        <!--     <TextBlock Text="{Binding fileSelected}"></TextBlock> -->
+        <!-- </StackPanel> -->
+        <!-- -->
     </DockPanel>
     
     
