Moved the logic of checked/unchecked to KeyringEntry.cs and DataFileEntry.cs. It nearly works, small issue with RootKeyring.cs it seems

--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -8,7 +8,7 @@
         x:Class="SecureWiki.Views.MainWindow"
         Opened="MainWindow_Shown"
         Icon="/Assets/avalonia-logo.ico"
-        Title="Avalonia.NETCoreMVVMApp"
+        Title="Please find a better name"
         Padding="10"><!--Width="300" Height="400"-->
 
     <!--
@@ -19,7 +19,16 @@
 
     <!--<TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     -->
+    <!--
     <DockPanel Dock="Top" LastChildFill="True" x:Name="TopLevelDockPanel">
+    -->
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="1*"></ColumnDefinition>
+            <ColumnDefinition Width="Auto"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
         <StackPanel Orientation="Vertical" VerticalAlignment="Top" Height="150" Width="300" x:Name="ButtonControlSp">
             <!--
             <TextBlock Name="NameLabel">What is your name?</TextBlock>
@@ -55,22 +64,24 @@
             
         </StackPanel>
         
-        <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+
+        
+        <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
                 <TreeView Items="{Binding rootKeyringCollection, Mode=TwoWay}" Name="TreeView1">
                     <TreeView.DataTemplates>
                         <TreeDataTemplate DataType="Models:RootKeyring" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="{Binding Checked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Foreground="Red" Text="{Binding Name, Mode=TwoWay}"></TextBlock>
                             </CheckBox>
                         </TreeDataTemplate>
                         <TreeDataTemplate DataType="Models:KeyringEntry" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="{Binding Checked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Text="{Binding Name}"></TextBlock>
                             </CheckBox>
                         </TreeDataTemplate>
                         <DataTemplate DataType="Models:DataFileEntry" >
-                            <CheckBox IsChecked="{Binding Checked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
                                 <TextBlock Foreground="Blue" Text="{Binding filename}"></TextBlock>
                             </CheckBox>
                         </DataTemplate>
@@ -84,7 +95,8 @@
             </StackPanel>
                 
         </ScrollViewer>
-        <ContentControl Content="{Binding selectedFile}">
+        
+        <ContentControl Grid.Column="2" Content="{Binding selectedFile}" Width="150">
             <ContentControl.ContentTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -92,16 +104,18 @@
                             <TextBlock Grid.Row="0" Grid.Column="0">File properties: </TextBlock>
                             <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding selectedFile.filename}"/>
                         </Grid>
-                    <ComboBox SelectedIndex="0" Items="{Binding revisions}">
+                        <ComboBox SelectedIndex="0" Items="{Binding revisions}">
                         
-                    </ComboBox>
+                        </ComboBox>
                     </StackPanel>
                 </DataTemplate>
             </ContentControl.ContentTemplate>
 
         </ContentControl>
 
+    </Grid>
+    <!--
     </DockPanel>
-    
+    -->
     
 </Window>
