--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:viewModels="clr-namespace:SecureWiki.ViewModels"
         xmlns:Models="clr-namespace:SecureWiki.Model"
+        xmlns:secureWiki="clr-namespace:SecureWiki"
         mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="400"
         x:Class="SecureWiki.Views.MainWindow"
         Opened="MainWindow_Shown"
@@ -24,9 +25,9 @@
     -->
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="1*"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <StackPanel Orientation="Vertical" VerticalAlignment="Top" Height="150" Width="300" x:Name="ButtonControlSp">
@@ -35,54 +36,57 @@
             <TextBox Name="NameTextBox"></TextBox>
             <TextBlock Name="MessageLabel"></TextBlock>        
             -->
-            
-            <TextBox Name="TextBox1" IsReadOnly="True" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap">
+
+            <TextBox Name="TextBox1" IsReadOnly="True" Width="{Binding  Width,ElementName=ButtonControlSp}"
+                     TextWrapping="Wrap">
                 The user may not modify the contents of this TextBox.
             </TextBox>
-            
+
             <Button Name="Button1" Click="Button1_Click">Button1</Button>
             <Button Name="Button2" Click="Button2_Click">Button2</Button>
             <Button Name="Button3" Click="Button3_Click">Button3</Button>
-            
+
             <TextBlock>Enter IP address of MediaWiki server</TextBlock>
-            <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding IP}">
-            </TextBox>
+            <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding IP}" />
             <Button Name="ButtonIp" Click="ButtonIP_Click">Change</Button>
 
             <TextBlock>Login to MediaWiki</TextBlock>
-            <TextBox Name="TextBoxUser" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Username}" Watermark="Username">
-            </TextBox>
-            <TextBox Name="TextBoxPass" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding Password}" Watermark="Password">
-            </TextBox>
+            <TextBox Name="TextBoxUser" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding Username}" Watermark="Username" />
+            <TextBox Name="TextBoxPass" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding Password}" Watermark="Password" />
             <Button Name="ButtonLogin" Click="ButtonLogin_Click">Login</Button>
-            
+
             <TextBlock>Share selected keyring</TextBlock>
-            <TextBox Name="TextBoxMail" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding MailRecipient}" Watermark="Recipient email">
-            </TextBox>
+            <TextBox Name="TextBoxMail" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap"
+                     Text="{Binding MailRecipient}" Watermark="Recipient email" />
             <Button Name="ButtonMail" Click="ButtonMail">Send</Button>
 
-            
-        </StackPanel>
-        
 
-        
+        </StackPanel>
+
+
         <ScrollViewer Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
             <StackPanel Orientation="Vertical">
                 <TreeView Items="{Binding rootKeyringCollection, Mode=TwoWay}" Name="TreeView1">
                     <TreeView.DataTemplates>
                         <TreeDataTemplate DataType="Models:RootKeyring" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                <TextBlock Foreground="Red" Text="{Binding Name, Mode=TwoWay}"></TextBlock>
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox"
+                                      Initialized="CheckBox_OnInitialized">
+                                <TextBlock Foreground="Red" Text="{Binding Name, Mode=TwoWay}" />
                             </CheckBox>
                         </TreeDataTemplate>
                         <TreeDataTemplate DataType="Models:KeyringEntry" ItemsSource="{Binding combinedList}">
-                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                <TextBlock Text="{Binding Name}"></TextBlock>
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox"
+                                      Initialized="CheckBox_OnInitialized" >
+                                <TextBlock Text="{Binding Name}" />
                             </CheckBox>
                         </TreeDataTemplate>
-                        <DataTemplate DataType="Models:DataFileEntry" >
-                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox" Initialized="CheckBox_OnInitialized">
-                                <TextBlock Foreground="Blue" Text="{Binding filename}"></TextBlock>
+                        <DataTemplate DataType="Models:DataFileEntry">
+                            <CheckBox IsChecked="{Binding IsChecked}" Name="CheckBox"
+                                      Initialized="CheckBox_OnInitialized" KeyDown="CheckBox_OnKeyDown">
+                                <TextBlock Foreground="Blue" Text="{Binding filename}" />
                             </CheckBox>
                         </DataTemplate>
                     </TreeView.DataTemplates>
@@ -93,29 +97,42 @@
                     -->
                 </TreeView>
             </StackPanel>
-                
         </ScrollViewer>
-        
-        <ContentControl Grid.Column="2" Content="{Binding selectedFile}" Width="150">
-            <ContentControl.ContentTemplate>
-                <DataTemplate>
-                    <StackPanel>
-                        <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
-                            <TextBlock Grid.Row="0" Grid.Column="0">File properties: </TextBlock>
-                            <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding selectedFile.filename}"/>
-                        </Grid>
-                        <ComboBox SelectedIndex="0" Items="{Binding revisions}">
-                        
-                        </ComboBox>
-                    </StackPanel>
-                </DataTemplate>
-            </ContentControl.ContentTemplate>
-
-        </ContentControl>
-
+        <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <StackPanel>
+                <ContentControl Content="{Binding selectedFile, Mode=TwoWay}" Width="300">
+                    <ContentControl.ContentTemplate>
+                        <DataTemplate>
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto">
+                                <TextBlock Grid.Row="0" Grid.Column="0">Filename: </TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding filename}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ContentControl.ContentTemplate>
+                </ContentControl>
+                <ListBox Items="{Binding revisions, Mode=TwoWay}" SelectionMode="Single" SelectedItem="{Binding selectedRevision}" Width="300">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Grid ColumnDefinitions="Auto,Auto" RowDefinitions="Auto,Auto, Auto, Auto">
+                                <TextBlock Grid.Row="0" Grid.Column="0">revisionID: </TextBlock>
+                                <TextBlock Grid.Row="0" Grid.Column="1" Text="{Binding revisionID}"/>
+                                <TextBlock Grid.Row="1" Grid.Column="0">owner: </TextBlock>
+                                <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding user}"/>
+                                <TextBlock Grid.Row="2" Grid.Column="0">time: </TextBlock>
+                                <TextBlock Grid.Row="2" Grid.Column="1" Text="{Binding timestamp}"/>
+                                <TextBlock Grid.Row="3" Grid.Column="0">size: </TextBlock>
+                                <TextBlock Grid.Row="3" Grid.Column="1" Text="{Binding size}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                <TextBlock>Download selected revision</TextBlock>
+                <Button Name="SelectedRevisionButton" Click="SelectedRevisionButton_OnClick">Click me!</Button>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
     <!--
     </DockPanel>
     -->
-    
+
 </Window>
