--- a/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
+++ b/SecureWiki/Avalonia.NETCoreMVVMApp/Views/MainWindow.axaml
@@ -41,8 +41,9 @@
             </TextBox>
             
             <Button Name="Button1" Click="Button1_Click">Button1</Button>
-            <Button Name="Button2" Click="Button2_Click">Button2</Button>
-            <Button Name="Button3" Click="Button3_Click">Button3</Button>
+            <Button Name="Button2" Click="Button2_Click">Print keyring info</Button>
+            <Button Name="Button3" Click="Button3_Click">Export keyring</Button>
+            <Button Name="Button4" Click="Button4_Click">Import keyring</Button>
             
             <TextBlock>Enter IP address of MediaWiki server</TextBlock>
             <TextBox Name="TextBoxIp" Width="{Binding  Width,ElementName=ButtonControlSp}" TextWrapping="Wrap" Text="{Binding IP}">
